# CompileScore

./: .gitignore  .gitmodules  README.md
.github/workflows/: BuildApps.yml  DataExtractorAll.yml  DataExtractorCI.yml  Release.yml  StandaloneCI.yml  VisualStudioCI.yml
CompileScore/: CompileDetailAdornment.xaml  CompileDetailAdornment.xaml.cs  CompileDetailTagger.cs  CompileDetailTaggerProvider.cs  CompileScore.csproj  CompileScore.sln  CompileScorePackage.cs  CompileScoreSettings.cs  CompilerData.cs  DocumentLifeTimeManager.cs  HighlightWordDefinitions.cs  HighlightWordTagger.cs  HighlightWordTaggerProvider.cs  IntraTextAdornmentTagger.cs  PopUpPlacement.cs  ScoreQuickInfoSource.cs  source.extension.vsixmanifest
CompileScore/Common/: CompilerData.cs  DocumentLifeTimeManager.cs  OutputLog.cs  ScoreColors.cs  UIConverters.cs
CompileScore/Glyph/: ScoreGlyphFactoryProvider.cs  ScoreGlyphTagger.cs  ScoreGlyphTaggerProvider.cs
CompileScore/Highlight/: HighlightTagger.cs  HighlightTaggerProvider.cs
CompileScore/Overview/: CompileDataTable.xaml  CompileDataTable.xaml.cs  CompileScorePackage.vsct  OverviewTable.xaml  OverviewTable.xaml.cs  OverviewTotalsTable.xaml  OverviewWindowCommand.cs  OverviewWindowControl.xaml  OverviewWindowControl.xaml.cs
CompileScore/Properties/: AssemblyInfo.cs
CompileScore/QuickInfo/: ScoreQuickInfoSource.cs  ScoreQuickInfoSourceProvider.cs
CompileScore/Shared/: CompileScorePackage.cs  CompileScoreSettings.cs  Shared.projitems  Shared.shproj  app.config
CompileScore/Shared/Common/: ColorTheme.cs  CompileFolders.cs  CompilerData.cs  DocumentLifeTimeManager.cs  Documentation.cs  EditorContext.cs  EditorUtils.cs  ExternalProcess.cs  FileWatcher.cs  OutputLog.cs  ParserData.cs  ScoreColors.cs  ThreadUtils.cs  UIConverters.cs
CompileScore/Shared/Editor/: CustomCommands.cs  EditorUtils.cs  ExternalProcess.cs  MacroEvaluator.cs  MonikerProxy.cs  Parser.cs  Profiler.cs  WindowProxy.cs
CompileScore/Shared/Glyph/: ScoreGlyphFactory.cs  ScoreGlyphFactoryProvider.cs  ScoreGlyphTagger.cs
CompileScore/Shared/Highlight/: HighlightTagger.cs  HighlightTaggerProvider.cs
CompileScore/Shared/Includers/: CompilerIncluders.cs  IncludersWindow.cs  IncludersWindowControl.xaml  IncludersWindowControl.xaml.cs
CompileScore/Shared/Overview/: CompileDataTable.xaml  CompileDataTable.xaml.cs  IncludersTable.xaml  IncludersTable.xaml.cs  OverviewTable.xaml  OverviewTable.xaml.cs  OverviewTotalsTable.xaml  OverviewTotalsTable.xaml.cs  OverviewWindow.cs  OverviewWindowControl.xaml  OverviewWindowControl.xaml.cs
CompileScore/SharedFiles/: CompileScorePackage.vsct
CompileScore/Timeline/: CompilerTimeline.cs  Timeline.xaml.cs  TimelineNodeTooltip.xaml  TimelineNodeTooltip.xaml.cs
CompileScore/VSIX/: CompileScore.csproj  CompileScore.sln  CompileScorePackage.cs  CompileScorePackage.vsct  CompileScoreSettings.cs  source.extension.vsixmanifest
CompileScore/VSIX16/: CompileScoreVS16.csproj  source.extension.vsixmanifest
CompileScore/VSIX17/: CompileScoreVS17.csproj  source.extension.vsixmanifest
CompileScore/WPF/: App.xaml  App.xaml.cs  CompileScoreWPF.csproj  CompileScoreWPF.sln  MainWindow.xaml  MainWindow.xaml.cs
DataExtractor/: CompileScoreSettings.json  Makefile  ScoreDataExtractor.sln  ScoreDataExtractor.vcxproj  ScoreDataExtractor.vcxproj.filters  main.js  packages.config
DataExtractor/Cpp/: CompileScoreSettings.json  ScoreDataExtractor.sln  ScoreDataExtractor.vcxproj  ScoreDataExtractor.vcxproj.filters
DataExtractor/JS/: main.js
DataExtractor/src/: binary.js  extract.js  fileIO.js  main.cpp
Parser/: CompileScoreParser.sln  CompileScoreParser.vcxproj  CompileScoreParser.vcxproj.filters  CompileScoreSettings.json
Parser/src/: IO.cpp  IO.h  Parser.cpp  Parser.h  ParserDefinitions.h  Processor.cpp  Processor.h  main.cpp
Scripts/: vcperf.ps1
TestProject/: CMakeLists.txt
TestProject/src/: main.cpp
TestProjects/CMake/: CMakeLists.txt  CMakeSettings.json  CompileScoreSettings.json
TestProjects/Clang/: CMakeLists.txt  CMakeSettings.json
TestProjects/ClangCpp/: CMakeLists.txt
TestProjects/MSVC/: TestProjectMSVC.sln  TestProjectMSVC.vcxproj  TestProjectMSVC.vcxproj.filters
TestProjects/NMake/: CompileScoreSettings.json  TestProject.sln  TestProject.vcxproj  main.cpp
TestProjects/Parser/: CompileScoreSettings.json  TestProjectParser.sln  TestProjectParser.vcxproj  TestProjectParser.vcxproj.filters
TestProjects/Regular/: CompileScoreSettings.json  TestProjectMSVC.vcxproj
(+183 files in other folders)
